--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,11 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Website created using react-mui-boilerplate"
+      content="Personal website displaying my most relevant projects"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>portfolio</title>
+    <title>Merlin Moelter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
